# vehikle

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  launcher.py  pyproject.toml  requirements.txt  setup.py  start.sh
conf/: __init__.py  config.yaml
models/: __init__.py
notebooks/: CarPricePrediction.ipynb
scraping/: car_spider.py
src/: exception.py  logger.py
src/api/: __init__.py  app.py
src/core/: __init__.py
src/extractors/: csv_extractor.py  extractor_factory.py  extractor_interface.py  web_extractor.py
src/models/: __init__.py
src/pipelines/: __init__.py  etl_pipeline.py
src/pipelines/data_processing/: __init__.py
src/pipelines/deployment/: __init__.py
src/pipelines/evaluations/: __init__.py
src/pipelines/training/: __init__.py
src/preprocessing/: __init__.py  tokenizer.py
src/scraping/: car_spider.py
tasks/: __init__.py  celery_config.py  celery_tasks.py  trigger_tasks.py
