[tool.poetry]
name = "vehikle"
version = "0.1.0"
description = "search the best price for the cars on the second hand market with the help of artificial intelligence"
authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
mypy = "^1.1.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
setuptools = "^67.6.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
celery = "^5.3.4"
prefect = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
